Redirect to HTTPS, Image squeezing, minor bugfixes

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Hyperspace by HTML5 UP</title>
+		<title>Elysium Labs</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -36,7 +36,7 @@
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
 							<h1>Elysium Labs</h1>
-							<p>A flexible, scalable, online learning platform for students.
+							<p>A flexible, scalable, online learning platform for professional Clinical Instructors.
 							<ul class="actions">
 								<li><a href="#one" class="button scrolly">Learn more</a></li>
 							</ul>
@@ -76,6 +76,18 @@
 
 				<!-- Two -->
 				<section id="two" class="wrapper style2 spotlights">
+                    <section>
+						<a href="#" class="image"><img src="images/pic02.jpg" alt="" data-position="top center" /></a>
+						<div class="content">
+							<div class="inner">
+								<h2>Clinical Instructors</h2>
+								<p>Check out our dashboard for managing questions, and seeing how students answer the question.</p>
+								<ul class="actions">
+									<li><a href="loginAsAdmin.php" class="button">Try out today!</a></li>
+								</ul>
+							</div>
+						</div>
+					</section>
 					<section>
 						<a href="#" class="image"><img src="images/pic01.jpg" alt="" data-position="center center" /></a>
 						<div class="content">
@@ -88,46 +100,12 @@
 							</div>
 						</div>
 					</section>
-					<section>
-						<a href="#" class="image"><img src="images/pic02.jpg" alt="" data-position="top center" /></a>
-						<div class="content">
-							<div class="inner">
-								<h2>Teachers</h2>
-								<p>Check out our dashboard for managing questions, and seeing how students answer the question.</p>
-								<ul class="actions">
-									<li><a href="loginAsAdmin.php" class="button">Try out today!</a></li>
-								</ul>
-							</div>
-						</div>
-					</section>
 				</section>
 
 				<!-- Three -->
 					<section id="three" class="wrapper style1 fade-up">
 						<div class="inner">
 							<h2>Get in touch</h2>
-							<div class="split style1">
-								<section>
-									<form action="mailto:joelteozh@gmail.com" method="post" enctype="text/plain">
-										<div class="fields">
-											<div class="field half">
-												<label for="name">Name</label>
-												<input type="text" name="name" id="name" />
-											</div>
-											<div class="field half">
-												<label for="email">Email</label>
-												<input type="text" name="email" id="email" />
-											</div>
-											<div class="field">
-												<label for="message">Message</label>
-												<textarea name="message" id="message" rows="5"></textarea>
-											</div>
-										</div>
-										<ul class="actions">
-											<li><a href="" class="button submit">Send Message</a></li>
-										</ul>
-									</form>
-								</section>
 								<section>
 									<ul class="contact">
 										<li>
@@ -146,7 +124,6 @@
 										</li>
 									</ul>
 								</section>
-							</div>
 						</div>
 					</section>
 
